syntax = "proto3";

package wrapperGrpc;

import "google/protobuf/empty.proto";

option go_package = "fusionauth-module/grpc/gerados/wrapper;wrapperGrpc";

service FusionAuthWrapper {
  rpc CriarUsuario (CriarUsuarioRequest) returns (google.protobuf.Empty);
}

message CriarUsuarioRequest {
  string email = 1; // E-mail do novo usuário
  string senha = 2; // Senha temporária
  string nome  = 3; // Nome novo do usuário
  bool sistema = 4; // TENANT: Define qual o tenant que o novo usuário será inserido (web / fabrica)
  string grupo = 5; // Caso seja na web, o usuário deve fazer parte do grupo de sua empresa
}
